--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/home_disabled?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
-logging.file=home_disabled.log
-logging.level.root=info
-logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
-logging.pattern.file=%d{yyyy/MM/dd-HH\:mm} [%thread] %-5level %logger- %msg%n
+spring.profiles.active=test
+spring.servlet.multipart.resolve-lazily=false
+logging.config=classpath:log4j2.xml
