--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.profiles.active=test
+spring.profiles.active=profile
 spring.servlet.multipart.resolve-lazily=false
 logging.config=classpath:log4j2.xml
