机构、残疾人、项目、补贴申请数据下载

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.profiles.active=profile
 spring.servlet.multipart.resolve-lazily=false
 logging.config=classpath:log4j2.xml
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
+
+# 加密所需的salt(盐)
+jasypt.encryptor.password=danj
+# 默认加密方式PBEWithMD5AndDES,可以更改为PBEWithMD5AndTripleDES
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
