--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>poi</artifactId>
             <version>3.9</version>
         </dependency>
+        <!--jasypt加密 -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>1.16</version>
+        </dependency>
     </dependencies>
 
     <build>
