--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,12 @@ logging.config=classpath:log4j2.xml
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
 
-# 加密所需的salt(盐)
+# 锟斤拷锟斤拷锟斤拷锟斤拷锟絪alt(锟斤拷)
 jasypt.encryptor.password=danj
-# 默认加密方式PBEWithMD5AndDES,可以更改为PBEWithMD5AndTripleDES
+# 默锟较硷拷锟杰凤拷式PBEWithMD5AndDES,锟斤拷锟皆革拷锟斤拷为PBEWithMD5AndTripleDES
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
+
+spring.devtools.restart.enabled=false
+spring.thymeleaf.cache=false
+spring.devtools.restart.exclude=src/main/java
+spring.out.ansi.enabled=NEVER
