--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.servlet.multipart.max-request-size=1000MB
 jasypt.encryptor.password=danj
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 
-#spring.devtools.restart.enabled=false
-#spring.thymeleaf.cache=false
+spring.devtools.restart.enabled=false
+spring.thymeleaf.cache=false
 spring.devtools.restart.exclude=src/main/java
-#spring.out.ansi.enabled=NEVER
+spring.out.ansi.enabled=NEVER
